# password-manager

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: crypto.rs  main.rs  manager.rs  models.rs  storage.rs
src/ui/: app.rs  components.rs  handlers.rs  mod.rs  mod.rs.new  theme.rs
