[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"
authors = ["Mohamamdreza Mohammadi <mr.mhmdi93@gmail.com>"]

[dependencies]
ring = "0.16"
tui = { version = "0.19", default-features = false, features = ['crossterm'] }
crossterm = "0.25"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
zeroize = "1.5"
dirs = "4.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }